imagen principal centrada

--- a/index.html
+++ b/index.html
@@ -12,34 +12,44 @@
     <header>
       <h1>Comenzando con la fotograf&iacute;a</h1>
       <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Paisaje</a>
-        <a href="#">Retratos</a>
+        <a href="#" id="Inicio">Inicio</a>
+        <a href="paisajes.html">Paisaje</a>
+        <a href="retratos.html">Retratos</a>
       </nav>
       </header>
-      <section>
+      <section id=imagen-principal>
         <img src="imagenes/imagen1.jpg" id="imagen1">
-        <img src="imagenes/imagen2.jpg" id="imagen2">
-        <h2>Paisajes</h2>
-        <img src="imagenes/imagen3.jpg" alt="">
-        <h2>Retratos</h2>
-      </section>
+        </section>
+        <section id="imagen-secundaria">
+          <img src="imagenes/imagen2.jpg" id="imagen2">
+          <h2>Paisajes</h2>
+          <img src="imagenes/imagen3.jpg" alt="">
+          <h2>Retratos</h2>
+        </section>
       <footer>
-        <h2>Contacto</h2>
-        <p>jesusleonardo122@gmail.com</p>
-        <p>calle 24 sur #14 28</p>
-        <p>telefono: 3213696956</p>
-        <h2>T&eacute;rminos</h2>
-        <p>conoce nuestros t&eacute;rminos y condiciones</p>
-        <h2>Redes sociales</h2>
-        <p>Comparte en nuestras redes</p>
-        <ul>
-          <li><img src="imagenes/facebook.png">Comenzando Fotograf&iacute;a</li>
-          <li><img src="imagenes/twitter.png">@ComenzandoFotograf&iacute;a</li>
-          <li><img src="imagenes/instagram.jpg" >ComenzandoFotograf&iacute;a</li>
-        </ul>
-        <h2>Derechos</h2>
-        <p>Copyright © Todos los Derechos Reservados</p>
+        <div class="contacto">
+          <h2>Contacto</h2>
+          <p>jesusleonardo122@gmail.com</p>
+          <p>calle 24 sur #14 28</p>
+          <p>telefono: 3213696956</p>
+        </div>
+        <div class="terminos">
+          <h2>T&eacute;rminos</h2>
+          <p>conoce nuestros t&eacute;rminos y condiciones</p>
+        </div>
+        <div class="redes-sociales">
+          <h2>Redes sociales</h2>
+          <p>Comparte en nuestras redes</p>
+          <ul>
+            <li><img src="imagenes/facebook.png" class="imagen">Comenzando Fotograf&iacute;a</li>
+            <li><img src="imagenes/twitter.png" class="imagen">@ComenzandoFotograf&iacute;a</li>
+            <li><img src="imagenes/instagram.jpg" class="imagen" >ComenzandoFotograf&iacute;a</li>
+          </ul>
+        </div>
+        <div class="Derechos">
+          <h2>Derechos</h2>
+          <p>Copyright © Todos los Derechos Reservados</p>
+        </div>
       </footer>
       </div>
   </body>
