--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device.width,user.scalable=no">
+    <meta name="viewport" content="initial-scale=1.0, width=device, user.scalable=no">
     <link rel="stylesheet" href="css/css.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Comenzando con la fotograf&iacute;a</title>
@@ -21,23 +21,27 @@
         <img src="imagenes/imagen1.jpg" id="imagen1">
         </section>
         <section id="imagen-secundaria">
-          <img src="imagenes/imagen2.jpg" id="imagen2">
-          <h2>Paisajes</h2>
-          <img src="imagenes/imagen3.jpg" alt="">
-          <h2>Retratos</h2>
+          <div class="Paisajes">
+            <img src="imagenes/imagen2.jpg" id="imagen2">
+            <h2 id="letra1">Paisajes</h2>
+          </div>
+          <div class="Retratos">
+            <img id="imagen3" src="imagenes/imagen3.jpg" alt="">
+            <h2 id="letra2">Retratos</h2>
+          </div>
         </section>
       <footer>
-        <div class="contacto">
+        <div class="caja1">
           <h2>Contacto</h2>
           <p>jesusleonardo122@gmail.com</p>
           <p>calle 24 sur #14 28</p>
           <p>telefono: 3213696956</p>
         </div>
-        <div class="terminos">
+        <div class="caja2">
           <h2>T&eacute;rminos</h2>
           <p>conoce nuestros t&eacute;rminos y condiciones</p>
         </div>
-        <div class="redes-sociales">
+        <div class="caja3">
           <h2>Redes sociales</h2>
           <p>Comparte en nuestras redes</p>
           <ul>
@@ -46,7 +50,7 @@
             <li><img src="imagenes/instagram.jpg" class="imagen" >ComenzandoFotograf&iacute;a</li>
           </ul>
         </div>
-        <div class="Derechos">
+        <div class="caja4">
           <h2>Derechos</h2>
           <p>Copyright © Todos los Derechos Reservados</p>
         </div>
