--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Comenzando con la fotograf&iacute;a</title>
   </head>
   <body>
-    <div class="Contenido">
     <header>
       <h1>Comenzando con la fotograf&iacute;a</h1>
       <nav>
@@ -17,7 +16,7 @@
         <a href="retratos.html">Retratos</a>
       </nav>
       </header>
-      <section id=imagen-principal>
+        <section id=imagen-principal>
         <img src="imagenes/imagen1.jpg" id="imagen1">
         </section>
         <section id="imagen-secundaria">
@@ -30,31 +29,32 @@
             <h2 id="letra2">Retratos</h2>
           </div>
         </section>
-      <footer>
-        <div class="caja1">
-          <h2>Contacto</h2>
-          <p>jesusleonardo122@gmail.com</p>
-          <p>calle 24 sur #14 28</p>
-          <p>telefono: 3213696956</p>
-        </div>
-        <div class="caja2">
-          <h2>T&eacute;rminos</h2>
-          <p>conoce nuestros t&eacute;rminos y condiciones</p>
-        </div>
-        <div class="caja3">
-          <h2>Redes sociales</h2>
-          <p>Comparte en nuestras redes</p>
-          <ul>
-            <li><img src="imagenes/facebook.png" class="imagen">Comenzando Fotograf&iacute;a</li>
-            <li><img src="imagenes/twitter.png" class="imagen">@ComenzandoFotograf&iacute;a</li>
-            <li><img src="imagenes/instagram.jpg" class="imagen" >ComenzandoFotograf&iacute;a</li>
-          </ul>
-        </div>
-        <div class="caja4">
-          <h2>Derechos</h2>
-          <p>Copyright © Todos los Derechos Reservados</p>
-        </div>
-      </footer>
-      </div>
+        <footer>
+          <div class="caja1" >
+            <h2>Contacto</h2>
+            <p>jesusleonardo122@gmail.com</p>
+            <p>calle 24 sur #14 28</p>
+            <p>telefono: 3213696956</p>
+          </div>
+          <div class="caja2">
+            <h2>T&eacute;rminos</h2>
+            <p>conoce nuestros t&eacute;rminos y condiciones</p>
+          </div>
+          <div class="caja3">
+            <h2>Redes sociales</h2>
+            <p>Comparte en nuestras redes</p>
+              <img src="imagenes/facebook2.png" class="footer-image">
+              <p>Comenzando Fotograf&iacute;a</p>
+              <img src="imagenes/logo.png" class="footer-image">
+              <p>Comenzando Fotograf&iacute;a</p>
+                <img src="imagenes/instagram2.png" class="footer-image">
+                <p>Comenzando Fotograf&iacute;a</p>
+          </div>
+          <div class="caja4">
+            <h2>Derechos</h2>
+            <h3>Jesus Nuñez</h3>
+            <p>Copyright © Todos los Derechos Reservados 2019</p>
+          </div>
+        </footer>
   </body>
 </html>
