--- a/paisajes.html
+++ b/paisajes.html
@@ -10,12 +10,46 @@
   <body>
     <div class="Contenido">
     <header>
-      <h1>Comenzando con la fotograf&iacute;a</h1>
+      <h1>Comenzando con los Paisajes</h1>
       <nav>
         <a href="index.html">Inicio</a>
         <a href="#" id="Inicio">Paisaje</a>
         <a href="retratos.html">Retratos</a>
       </nav>
       </header>
+      <section>
+        <img src="imagenes/imagen3.jpg" id="imagen1" >
+        <img src="imagenes/imagen3.jpg" id="imagen2" >
+        <img src="imagenes/imagen3.jpg" id="imagen3">
+        <img src="imagenes/imagen3.jpg" id="imagen4">
+        <img src="imagenes/imagen3.jpg" id="imagen5">
+        <img src="imagenes/imagen3.jpg" id="imagen6">
+      <footer>
+        <div class="caja1" id="caja1">
+          <h2>Contacto</h2>
+          <p>jesusleonardo122@gmail.com</p>
+          <p>calle 24 sur #14 28</p>
+          <p>telefono: 3213696956</p>
+        </div>
+        <div class="caja2">
+          <h2>T&eacute;rminos</h2>
+          <p>conoce nuestros t&eacute;rminos y condiciones</p>
+        </div>
+        <div class="caja3">
+          <h2>Redes sociales</h2>
+          <p>Comparte en nuestras redes</p>
+            <img src="imagenes/facebook2.png" class="footer-image">
+            <p>Comenzando Fotograf&iacute;a</p>
+            <img src="imagenes/logo.png" class="footer-image">
+            <p>Comenzando Fotograf&iacute;a</p>
+            <img src="imagenes/instagram2.png" class="footer-image">
+            <p>Comenzando Fotograf&iacute;a</p>
+        </div>
+        <div class="caja4">
+          <h2>Derechos</h2>
+          <h3>Jesus Nuñez</h3>
+          <p>Copyright © Todos los Derechos Reservados 2019</p>
+        </div>
+      </footer>
   </body>
 </html>
